[package]
name = "handsome_logger"
version = "0.3.0"
edition = "2021"
authors = ["Rafał Mikrut <qarminkrut@gmail.com>"]
description = "A fast, handsom and quite easy to use logger"
documentation = "https://docs.rs/handsome_logger/"
repository = "https://github.com/qarmin/handsome_logger"
readme = "README.md"
keywords = ["log", "filelog", "logging"]
license = "MIT OR Apache-2.0"
rust-version = "1.65.0"

[features]
default = ["time-local-offset"]
time-local-offset = ["time/local-offset"]
chrono-local-offset = ["chrono"] # Time local offset is safe, but sometimes not works

[dependencies]
log = { version = "0.4", features = ["std"] }
termcolor = { version = "1.2.*" }
time = { version = "0.3", features = ["formatting", "macros"] }
chrono = { version = "0.4.26", optional = true }
