[package]
name = "handsome_logger"
version = "0.9.0"
edition = "2021"
authors = ["Rafał Mikrut <qarminkrut@gmail.com>"]
description = "A fast, handsome and quite easy to use logger"
documentation = "https://docs.rs/handsome_logger/"
repository = "https://github.com/qarmin/handsome_logger"
readme = "README.md"
keywords = ["log", "filelog", "logging"]
license = "MIT OR Apache-2.0"
rust-version = "1.81.0"

[dependencies]
log = { version = "0.4", features = ["std"] }
termcolor = { version = "1.3" }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
tz-rs = "0.7"
