[package]
name = "saving_logs_to_file_with_rotating"
version = "0.1.0"
rust-version = "1.67.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
handsome_logger = { path = "../..", version = "0.8" }
file-rotate = "0.7.5"
